Attempt to get a proper twitter card

--- a/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
+++ b/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
@@ -114,7 +114,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","preview","twitter","draft"]}},"value":[{"type":"character","attributes":{},"value":["#30DayMapChallenge & #RStats"]},{"type":"character","attributes":{},"value":["Day 30: Metamapping day\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lorena Abad"]}]}]},{"type":"character","attributes":{},"value":["2021-11-30"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_float","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[2]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["r-spatial","dataviz","30daymapchallenge","rstats"]},{"type":"character","attributes":{},"value":["figs/summary.png"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@loreabad6"]},{"type":"character","attributes":{},"value":["@loreabad6"]}]},{"type":"logical","attributes":{},"value":[false]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","preview","twitter","draft"]}},"value":[{"type":"character","attributes":{},"value":["#30DayMapChallenge & #RStats"]},{"type":"character","attributes":{},"value":["Day 30: Metamapping day\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lorena Abad"]}]}]},{"type":"character","attributes":{},"value":["2021-11-30"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_float","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[2]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["r-spatial","dataviz","30daymapchallenge","rstats"]},{"type":"character","attributes":{},"value":["https://loreabad6.github.io/posts/2021-11-30-30daymapchallenge-rstats/figs/summary.png"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@loreabad6"]},{"type":"character","attributes":{},"value":["@loreabad6"]}]},{"type":"logical","attributes":{},"value":[false]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1554,7 +1554,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>I managed to get all of the packages I used, per script. Next tasks: summarize by number of times I called each package, and assign them a category. You can see the code I used <a href="https://github.com/loreabad6/30DayMapChallenge/blob/main/scripts/day30_meta.R">here</a>.</p>
 <p>The final result? The packages I used for each of my self-assigned categories and how many times I used them:</p>
 <div class="layout-chunk" data-layout="l-body-outset">
-<p><img src="figs/day30.png" width="1476" /></p>
+<p><img src="https://raw.githubusercontent.com/loreabad6/30DayMapChallenge/main/figs/day30.png" /><!-- --></p>
 </div>
 <p><em>Insights:</em></p>
 <ul>
@@ -1588,12 +1588,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>Another package of the tidyverse is <em><strong>ggplot2</strong></em>, which introduces the grammar of graphics into R and is extremely powerful to create awesome visualizations. Two main functions allow you to combine this package with spatial data: <code>geom_sf()</code> and <code>geom_stars()</code>. One interesting tip, if you learn to use <code>coord_sf()</code>, you can do things like assigning a CRS to your plot, although your data has a different projection, as <code>coord_sf(crs ="+proj=geos")</code></p>
 <p>This are the ggplot extensions I use the most:</p>
 <div class="layout-chunk" data-layout="l-body">
-<div id="hlvihrrwxw" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="kgmagfcdhk" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#hlvihrrwxw .gt_table {
+#kgmagfcdhk .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -1618,7 +1618,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_heading {
+#kgmagfcdhk .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -1630,7 +1630,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_title {
+#kgmagfcdhk .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -1640,7 +1640,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#hlvihrrwxw .gt_subtitle {
+#kgmagfcdhk .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -1650,13 +1650,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#hlvihrrwxw .gt_bottom_border {
+#kgmagfcdhk .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_col_headings {
+#kgmagfcdhk .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1671,7 +1671,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_col_heading {
+#kgmagfcdhk .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1691,7 +1691,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#hlvihrrwxw .gt_column_spanner_outer {
+#kgmagfcdhk .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1703,15 +1703,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#hlvihrrwxw .gt_column_spanner_outer:first-child {
+#kgmagfcdhk .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#hlvihrrwxw .gt_column_spanner_outer:last-child {
+#kgmagfcdhk .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#hlvihrrwxw .gt_column_spanner {
+#kgmagfcdhk .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -1723,7 +1723,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#hlvihrrwxw .gt_group_heading {
+#kgmagfcdhk .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1745,7 +1745,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#hlvihrrwxw .gt_empty_group_heading {
+#kgmagfcdhk .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1760,15 +1760,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#hlvihrrwxw .gt_from_md > :first-child {
+#kgmagfcdhk .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#hlvihrrwxw .gt_from_md > :last-child {
+#kgmagfcdhk .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#hlvihrrwxw .gt_row {
+#kgmagfcdhk .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1787,7 +1787,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#hlvihrrwxw .gt_stub {
+#kgmagfcdhk .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1799,7 +1799,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#hlvihrrwxw .gt_summary_row {
+#kgmagfcdhk .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1809,7 +1809,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#hlvihrrwxw .gt_first_summary_row {
+#kgmagfcdhk .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1819,7 +1819,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_grand_summary_row {
+#kgmagfcdhk .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1829,7 +1829,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#hlvihrrwxw .gt_first_grand_summary_row {
+#kgmagfcdhk .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1839,11 +1839,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_striped {
+#kgmagfcdhk .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#hlvihrrwxw .gt_table_body {
+#kgmagfcdhk .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1852,7 +1852,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_footnotes {
+#kgmagfcdhk .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1866,13 +1866,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_footnote {
+#kgmagfcdhk .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#hlvihrrwxw .gt_sourcenotes {
+#kgmagfcdhk .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1886,41 +1886,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#hlvihrrwxw .gt_sourcenote {
+#kgmagfcdhk .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#hlvihrrwxw .gt_left {
+#kgmagfcdhk .gt_left {
   text-align: left;
 }
 
-#hlvihrrwxw .gt_center {
+#kgmagfcdhk .gt_center {
   text-align: center;
 }
 
-#hlvihrrwxw .gt_right {
+#kgmagfcdhk .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#hlvihrrwxw .gt_font_normal {
+#kgmagfcdhk .gt_font_normal {
   font-weight: normal;
 }
 
-#hlvihrrwxw .gt_font_bold {
+#kgmagfcdhk .gt_font_bold {
   font-weight: bold;
 }
 
-#hlvihrrwxw .gt_font_italic {
+#kgmagfcdhk .gt_font_italic {
   font-style: italic;
 }
 
-#hlvihrrwxw .gt_super {
+#kgmagfcdhk .gt_super {
   font-size: 65%;
 }
 
-#hlvihrrwxw .gt_footnote_marks {
+#kgmagfcdhk .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -1995,12 +1995,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="honorable-mentions">Honorable mentions</h2>
 <p>Although not on the top 7 above, there are some packages that I use frequently, but were not so used for this challenge. There are also really cool packages that I only discovered in the past month. Here is a table of how I used them:</p>
 <div class="layout-chunk" data-layout="l-body-outset">
-<div id="uebqndwptb" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="ptyyffpudf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#uebqndwptb .gt_table {
+#ptyyffpudf .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2025,7 +2025,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_heading {
+#ptyyffpudf .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2037,7 +2037,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_title {
+#ptyyffpudf .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2047,7 +2047,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#uebqndwptb .gt_subtitle {
+#ptyyffpudf .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2057,13 +2057,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#uebqndwptb .gt_bottom_border {
+#ptyyffpudf .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_col_headings {
+#ptyyffpudf .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2078,7 +2078,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_col_heading {
+#ptyyffpudf .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2098,7 +2098,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#uebqndwptb .gt_column_spanner_outer {
+#ptyyffpudf .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2110,15 +2110,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#uebqndwptb .gt_column_spanner_outer:first-child {
+#ptyyffpudf .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#uebqndwptb .gt_column_spanner_outer:last-child {
+#ptyyffpudf .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#uebqndwptb .gt_column_spanner {
+#ptyyffpudf .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2130,7 +2130,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#uebqndwptb .gt_group_heading {
+#ptyyffpudf .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2152,7 +2152,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#uebqndwptb .gt_empty_group_heading {
+#ptyyffpudf .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2167,15 +2167,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#uebqndwptb .gt_from_md > :first-child {
+#ptyyffpudf .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#uebqndwptb .gt_from_md > :last-child {
+#ptyyffpudf .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#uebqndwptb .gt_row {
+#ptyyffpudf .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2194,7 +2194,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#uebqndwptb .gt_stub {
+#ptyyffpudf .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2206,7 +2206,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#uebqndwptb .gt_summary_row {
+#ptyyffpudf .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2216,7 +2216,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#uebqndwptb .gt_first_summary_row {
+#ptyyffpudf .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2226,7 +2226,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_grand_summary_row {
+#ptyyffpudf .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2236,7 +2236,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#uebqndwptb .gt_first_grand_summary_row {
+#ptyyffpudf .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2246,11 +2246,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_striped {
+#ptyyffpudf .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#uebqndwptb .gt_table_body {
+#ptyyffpudf .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2259,7 +2259,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_footnotes {
+#ptyyffpudf .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2273,13 +2273,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_footnote {
+#ptyyffpudf .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#uebqndwptb .gt_sourcenotes {
+#ptyyffpudf .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2293,41 +2293,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#uebqndwptb .gt_sourcenote {
+#ptyyffpudf .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#uebqndwptb .gt_left {
+#ptyyffpudf .gt_left {
   text-align: left;
 }
 
-#uebqndwptb .gt_center {
+#ptyyffpudf .gt_center {
   text-align: center;
 }
 
-#uebqndwptb .gt_right {
+#ptyyffpudf .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#uebqndwptb .gt_font_normal {
+#ptyyffpudf .gt_font_normal {
   font-weight: normal;
 }
 
-#uebqndwptb .gt_font_bold {
+#ptyyffpudf .gt_font_bold {
   font-weight: bold;
 }
 
-#uebqndwptb .gt_font_italic {
+#ptyyffpudf .gt_font_italic {
   font-style: italic;
 }
 
-#uebqndwptb .gt_super {
+#ptyyffpudf .gt_super {
   font-size: 65%;
 }
 
-#uebqndwptb .gt_footnote_marks {
+#ptyyffpudf .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
