--- a/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
+++ b/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
@@ -101,12 +101,18 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <meta property="og:title" content="#30DayMapChallenge &amp; #RStats"/>
   <meta property="og:type" content="article"/>
   <meta property="og:description" content="Day 30: Metamapping day"/>
+  <meta property="og:image" content="https://loreabad6.github.io/figs/summary.png"/>
+  <meta property="og:image:width" content="4100"/>
+  <meta property="og:image:height" content="2154"/>
   <meta property="og:locale" content="en_US"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
-  <meta property="twitter:card" content="summary"/>
+  <meta property="twitter:card" content="summary_large_image"/>
   <meta property="twitter:title" content="#30DayMapChallenge &amp; #RStats"/>
   <meta property="twitter:description" content="Day 30: Metamapping day"/>
+  <meta property="twitter:image" content="https://loreabad6.github.io/figs/summary.png"/>
+  <meta property="twitter:image:width" content="4100"/>
+  <meta property="twitter:image:height" content="2154"/>
   <meta property="twitter:site" content="@loreabad6"/>
   <meta property="twitter:creator" content="@loreabad6"/>
 
@@ -114,7 +120,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","preview","twitter","draft"]}},"value":[{"type":"character","attributes":{},"value":["#30DayMapChallenge & #RStats"]},{"type":"character","attributes":{},"value":["Day 30: Metamapping day\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lorena Abad"]}]}]},{"type":"character","attributes":{},"value":["2021-11-30"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_float","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[2]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["r-spatial","dataviz","30daymapchallenge","rstats"]},{"type":"character","attributes":{},"value":["https://loreabad6.github.io/posts/2021-11-30-30daymapchallenge-rstats/figs/summary.png"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@loreabad6"]},{"type":"character","attributes":{},"value":["@loreabad6"]}]},{"type":"logical","attributes":{},"value":[false]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","base_url","preview","twitter","draft"]}},"value":[{"type":"character","attributes":{},"value":["#30DayMapChallenge & #RStats"]},{"type":"character","attributes":{},"value":["Day 30: Metamapping day\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lorena Abad"]}]}]},{"type":"character","attributes":{},"value":["2021-11-30"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_float","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[2]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["r-spatial","dataviz","30daymapchallenge","rstats"]},{"type":"character","attributes":{},"value":["https://loreabad6.github.io"]},{"type":"character","attributes":{},"value":["figs/summary.png"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@loreabad6"]},{"type":"character","attributes":{},"value":["@loreabad6"]}]},{"type":"logical","attributes":{},"value":[false]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1588,12 +1594,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>Another package of the tidyverse is <em><strong>ggplot2</strong></em>, which introduces the grammar of graphics into R and is extremely powerful to create awesome visualizations. Two main functions allow you to combine this package with spatial data: <code>geom_sf()</code> and <code>geom_stars()</code>. One interesting tip, if you learn to use <code>coord_sf()</code>, you can do things like assigning a CRS to your plot, although your data has a different projection, as <code>coord_sf(crs ="+proj=geos")</code></p>
 <p>This are the ggplot extensions I use the most:</p>
 <div class="layout-chunk" data-layout="l-body">
-<div id="kgmagfcdhk" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="zpdgxngitm" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#kgmagfcdhk .gt_table {
+#zpdgxngitm .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -1618,7 +1624,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_heading {
+#zpdgxngitm .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -1630,7 +1636,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_title {
+#zpdgxngitm .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -1640,7 +1646,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#kgmagfcdhk .gt_subtitle {
+#zpdgxngitm .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -1650,13 +1656,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#kgmagfcdhk .gt_bottom_border {
+#zpdgxngitm .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_col_headings {
+#zpdgxngitm .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1671,7 +1677,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_col_heading {
+#zpdgxngitm .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1691,7 +1697,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#kgmagfcdhk .gt_column_spanner_outer {
+#zpdgxngitm .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1703,15 +1709,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#kgmagfcdhk .gt_column_spanner_outer:first-child {
+#zpdgxngitm .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#kgmagfcdhk .gt_column_spanner_outer:last-child {
+#zpdgxngitm .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#kgmagfcdhk .gt_column_spanner {
+#zpdgxngitm .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -1723,7 +1729,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#kgmagfcdhk .gt_group_heading {
+#zpdgxngitm .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1745,7 +1751,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#kgmagfcdhk .gt_empty_group_heading {
+#zpdgxngitm .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1760,15 +1766,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#kgmagfcdhk .gt_from_md > :first-child {
+#zpdgxngitm .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#kgmagfcdhk .gt_from_md > :last-child {
+#zpdgxngitm .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#kgmagfcdhk .gt_row {
+#zpdgxngitm .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1787,7 +1793,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#kgmagfcdhk .gt_stub {
+#zpdgxngitm .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1799,7 +1805,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#kgmagfcdhk .gt_summary_row {
+#zpdgxngitm .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1809,7 +1815,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#kgmagfcdhk .gt_first_summary_row {
+#zpdgxngitm .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1819,7 +1825,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_grand_summary_row {
+#zpdgxngitm .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1829,7 +1835,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#kgmagfcdhk .gt_first_grand_summary_row {
+#zpdgxngitm .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1839,11 +1845,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_striped {
+#zpdgxngitm .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#kgmagfcdhk .gt_table_body {
+#zpdgxngitm .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1852,7 +1858,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_footnotes {
+#zpdgxngitm .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1866,13 +1872,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_footnote {
+#zpdgxngitm .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#kgmagfcdhk .gt_sourcenotes {
+#zpdgxngitm .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1886,41 +1892,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#kgmagfcdhk .gt_sourcenote {
+#zpdgxngitm .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#kgmagfcdhk .gt_left {
+#zpdgxngitm .gt_left {
   text-align: left;
 }
 
-#kgmagfcdhk .gt_center {
+#zpdgxngitm .gt_center {
   text-align: center;
 }
 
-#kgmagfcdhk .gt_right {
+#zpdgxngitm .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#kgmagfcdhk .gt_font_normal {
+#zpdgxngitm .gt_font_normal {
   font-weight: normal;
 }
 
-#kgmagfcdhk .gt_font_bold {
+#zpdgxngitm .gt_font_bold {
   font-weight: bold;
 }
 
-#kgmagfcdhk .gt_font_italic {
+#zpdgxngitm .gt_font_italic {
   font-style: italic;
 }
 
-#kgmagfcdhk .gt_super {
+#zpdgxngitm .gt_super {
   font-size: 65%;
 }
 
-#kgmagfcdhk .gt_footnote_marks {
+#zpdgxngitm .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -1995,12 +2001,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="honorable-mentions">Honorable mentions</h2>
 <p>Although not on the top 7 above, there are some packages that I use frequently, but were not so used for this challenge. There are also really cool packages that I only discovered in the past month. Here is a table of how I used them:</p>
 <div class="layout-chunk" data-layout="l-body-outset">
-<div id="ptyyffpudf" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="zpingfyxrr" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#ptyyffpudf .gt_table {
+#zpingfyxrr .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2025,7 +2031,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_heading {
+#zpingfyxrr .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2037,7 +2043,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_title {
+#zpingfyxrr .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2047,7 +2053,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#ptyyffpudf .gt_subtitle {
+#zpingfyxrr .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2057,13 +2063,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#ptyyffpudf .gt_bottom_border {
+#zpingfyxrr .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_col_headings {
+#zpingfyxrr .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2078,7 +2084,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_col_heading {
+#zpingfyxrr .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2098,7 +2104,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#ptyyffpudf .gt_column_spanner_outer {
+#zpingfyxrr .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2110,15 +2116,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#ptyyffpudf .gt_column_spanner_outer:first-child {
+#zpingfyxrr .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ptyyffpudf .gt_column_spanner_outer:last-child {
+#zpingfyxrr .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ptyyffpudf .gt_column_spanner {
+#zpingfyxrr .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2130,7 +2136,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#ptyyffpudf .gt_group_heading {
+#zpingfyxrr .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2152,7 +2158,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#ptyyffpudf .gt_empty_group_heading {
+#zpingfyxrr .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2167,15 +2173,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#ptyyffpudf .gt_from_md > :first-child {
+#zpingfyxrr .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ptyyffpudf .gt_from_md > :last-child {
+#zpingfyxrr .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ptyyffpudf .gt_row {
+#zpingfyxrr .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2194,7 +2200,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#ptyyffpudf .gt_stub {
+#zpingfyxrr .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2206,7 +2212,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#ptyyffpudf .gt_summary_row {
+#zpingfyxrr .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2216,7 +2222,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#ptyyffpudf .gt_first_summary_row {
+#zpingfyxrr .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2226,7 +2232,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_grand_summary_row {
+#zpingfyxrr .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2236,7 +2242,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#ptyyffpudf .gt_first_grand_summary_row {
+#zpingfyxrr .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2246,11 +2252,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_striped {
+#zpingfyxrr .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ptyyffpudf .gt_table_body {
+#zpingfyxrr .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2259,7 +2265,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_footnotes {
+#zpingfyxrr .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2273,13 +2279,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_footnote {
+#zpingfyxrr .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#ptyyffpudf .gt_sourcenotes {
+#zpingfyxrr .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2293,41 +2299,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#ptyyffpudf .gt_sourcenote {
+#zpingfyxrr .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#ptyyffpudf .gt_left {
+#zpingfyxrr .gt_left {
   text-align: left;
 }
 
-#ptyyffpudf .gt_center {
+#zpingfyxrr .gt_center {
   text-align: center;
 }
 
-#ptyyffpudf .gt_right {
+#zpingfyxrr .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ptyyffpudf .gt_font_normal {
+#zpingfyxrr .gt_font_normal {
   font-weight: normal;
 }
 
-#ptyyffpudf .gt_font_bold {
+#zpingfyxrr .gt_font_bold {
   font-weight: bold;
 }
 
-#ptyyffpudf .gt_font_italic {
+#zpingfyxrr .gt_font_italic {
   font-style: italic;
 }
 
-#ptyyffpudf .gt_super {
+#zpingfyxrr .gt_super {
   font-size: 65%;
 }
 
-#ptyyffpudf .gt_footnote_marks {
+#zpingfyxrr .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
