Attempt 3 to add twitter card

--- a/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
+++ b/_posts/2021-11-30-30daymapchallenge-rstats/30daymapchallenge.html
@@ -101,18 +101,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <meta property="og:title" content="#30DayMapChallenge &amp; #RStats"/>
   <meta property="og:type" content="article"/>
   <meta property="og:description" content="Day 30: Metamapping day"/>
-  <meta property="og:image" content="https://loreabad6.github.io/figs/summary.png"/>
-  <meta property="og:image:width" content="4100"/>
-  <meta property="og:image:height" content="2154"/>
   <meta property="og:locale" content="en_US"/>
 
   <!--  https://dev.twitter.com/cards/types/summary -->
-  <meta property="twitter:card" content="summary_large_image"/>
+  <meta property="twitter:card" content="summary"/>
   <meta property="twitter:title" content="#30DayMapChallenge &amp; #RStats"/>
   <meta property="twitter:description" content="Day 30: Metamapping day"/>
-  <meta property="twitter:image" content="https://loreabad6.github.io/figs/summary.png"/>
-  <meta property="twitter:image:width" content="4100"/>
-  <meta property="twitter:image:height" content="2154"/>
   <meta property="twitter:site" content="@loreabad6"/>
   <meta property="twitter:creator" content="@loreabad6"/>
 
@@ -120,7 +114,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","base_url","preview","twitter","draft"]}},"value":[{"type":"character","attributes":{},"value":["#30DayMapChallenge & #RStats"]},{"type":"character","attributes":{},"value":["Day 30: Metamapping day\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lorena Abad"]}]}]},{"type":"character","attributes":{},"value":["2021-11-30"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_float","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[2]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["r-spatial","dataviz","30daymapchallenge","rstats"]},{"type":"character","attributes":{},"value":["https://loreabad6.github.io"]},{"type":"character","attributes":{},"value":["figs/summary.png"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@loreabad6"]},{"type":"character","attributes":{},"value":["@loreabad6"]}]},{"type":"logical","attributes":{},"value":[false]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","description","author","date","output","categories","preview","twitter","draft"]}},"value":[{"type":"character","attributes":{},"value":["#30DayMapChallenge & #RStats"]},{"type":"character","attributes":{},"value":["Day 30: Metamapping day\n"]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name"]}},"value":[{"type":"character","attributes":{},"value":["Lorena Abad"]}]}]},{"type":"character","attributes":{},"value":["2021-11-30"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["toc","toc_float","toc_depth","self_contained"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[true]},{"type":"integer","attributes":{},"value":[2]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["r-spatial","dataviz","30daymapchallenge","rstats"]},{"type":"character","attributes":{},"value":["figs/preview.png"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["site","creator"]}},"value":[{"type":"character","attributes":{},"value":["@loreabad6"]},{"type":"character","attributes":{},"value":["@loreabad6"]}]},{"type":"logical","attributes":{},"value":[false]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -1594,12 +1588,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <p>Another package of the tidyverse is <em><strong>ggplot2</strong></em>, which introduces the grammar of graphics into R and is extremely powerful to create awesome visualizations. Two main functions allow you to combine this package with spatial data: <code>geom_sf()</code> and <code>geom_stars()</code>. One interesting tip, if you learn to use <code>coord_sf()</code>, you can do things like assigning a CRS to your plot, although your data has a different projection, as <code>coord_sf(crs ="+proj=geos")</code></p>
 <p>This are the ggplot extensions I use the most:</p>
 <div class="layout-chunk" data-layout="l-body">
-<div id="zpdgxngitm" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="otwakrzyph" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#zpdgxngitm .gt_table {
+#otwakrzyph .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -1624,7 +1618,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_heading {
+#otwakrzyph .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -1636,7 +1630,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_title {
+#otwakrzyph .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -1646,7 +1640,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#zpdgxngitm .gt_subtitle {
+#otwakrzyph .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -1656,13 +1650,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#zpdgxngitm .gt_bottom_border {
+#otwakrzyph .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_col_headings {
+#otwakrzyph .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1677,7 +1671,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_col_heading {
+#otwakrzyph .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1697,7 +1691,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#zpdgxngitm .gt_column_spanner_outer {
+#otwakrzyph .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1709,15 +1703,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#zpdgxngitm .gt_column_spanner_outer:first-child {
+#otwakrzyph .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#zpdgxngitm .gt_column_spanner_outer:last-child {
+#otwakrzyph .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#zpdgxngitm .gt_column_spanner {
+#otwakrzyph .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -1729,7 +1723,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#zpdgxngitm .gt_group_heading {
+#otwakrzyph .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1751,7 +1745,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#zpdgxngitm .gt_empty_group_heading {
+#otwakrzyph .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -1766,15 +1760,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#zpdgxngitm .gt_from_md > :first-child {
+#otwakrzyph .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#zpdgxngitm .gt_from_md > :last-child {
+#otwakrzyph .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#zpdgxngitm .gt_row {
+#otwakrzyph .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1793,7 +1787,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#zpdgxngitm .gt_stub {
+#otwakrzyph .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1805,7 +1799,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#zpdgxngitm .gt_summary_row {
+#otwakrzyph .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1815,7 +1809,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#zpdgxngitm .gt_first_summary_row {
+#otwakrzyph .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1825,7 +1819,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_grand_summary_row {
+#otwakrzyph .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1835,7 +1829,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#zpdgxngitm .gt_first_grand_summary_row {
+#otwakrzyph .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1845,11 +1839,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_striped {
+#otwakrzyph .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#zpdgxngitm .gt_table_body {
+#otwakrzyph .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1858,7 +1852,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_footnotes {
+#otwakrzyph .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1872,13 +1866,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_footnote {
+#otwakrzyph .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#zpdgxngitm .gt_sourcenotes {
+#otwakrzyph .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1892,41 +1886,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpdgxngitm .gt_sourcenote {
+#otwakrzyph .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#zpdgxngitm .gt_left {
+#otwakrzyph .gt_left {
   text-align: left;
 }
 
-#zpdgxngitm .gt_center {
+#otwakrzyph .gt_center {
   text-align: center;
 }
 
-#zpdgxngitm .gt_right {
+#otwakrzyph .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#zpdgxngitm .gt_font_normal {
+#otwakrzyph .gt_font_normal {
   font-weight: normal;
 }
 
-#zpdgxngitm .gt_font_bold {
+#otwakrzyph .gt_font_bold {
   font-weight: bold;
 }
 
-#zpdgxngitm .gt_font_italic {
+#otwakrzyph .gt_font_italic {
   font-style: italic;
 }
 
-#zpdgxngitm .gt_super {
+#otwakrzyph .gt_super {
   font-size: 65%;
 }
 
-#zpdgxngitm .gt_footnote_marks {
+#otwakrzyph .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -2001,12 +1995,12 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="honorable-mentions">Honorable mentions</h2>
 <p>Although not on the top 7 above, there are some packages that I use frequently, but were not so used for this challenge. There are also really cool packages that I only discovered in the past month. Here is a table of how I used them:</p>
 <div class="layout-chunk" data-layout="l-body-outset">
-<div id="zpingfyxrr" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="jxjnkupoxm" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#zpingfyxrr .gt_table {
+#jxjnkupoxm .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -2031,7 +2025,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-left-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_heading {
+#jxjnkupoxm .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -2043,7 +2037,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_title {
+#jxjnkupoxm .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -2053,7 +2047,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-width: 0;
 }
 
-#zpingfyxrr .gt_subtitle {
+#jxjnkupoxm .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -2063,13 +2057,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-width: 0;
 }
 
-#zpingfyxrr .gt_bottom_border {
+#jxjnkupoxm .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_col_headings {
+#jxjnkupoxm .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2084,7 +2078,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_col_heading {
+#jxjnkupoxm .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2104,7 +2098,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#zpingfyxrr .gt_column_spanner_outer {
+#jxjnkupoxm .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2116,15 +2110,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 4px;
 }
 
-#zpingfyxrr .gt_column_spanner_outer:first-child {
+#jxjnkupoxm .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#zpingfyxrr .gt_column_spanner_outer:last-child {
+#jxjnkupoxm .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#zpingfyxrr .gt_column_spanner {
+#jxjnkupoxm .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -2136,7 +2130,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   width: 100%;
 }
 
-#zpingfyxrr .gt_group_heading {
+#jxjnkupoxm .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2158,7 +2152,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#zpingfyxrr .gt_empty_group_heading {
+#jxjnkupoxm .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -2173,15 +2167,15 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   vertical-align: middle;
 }
 
-#zpingfyxrr .gt_from_md > :first-child {
+#jxjnkupoxm .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#zpingfyxrr .gt_from_md > :last-child {
+#jxjnkupoxm .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#zpingfyxrr .gt_row {
+#jxjnkupoxm .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2200,7 +2194,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   overflow-x: hidden;
 }
 
-#zpingfyxrr .gt_stub {
+#jxjnkupoxm .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -2212,7 +2206,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-left: 12px;
 }
 
-#zpingfyxrr .gt_summary_row {
+#jxjnkupoxm .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2222,7 +2216,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#zpingfyxrr .gt_first_summary_row {
+#jxjnkupoxm .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2232,7 +2226,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_grand_summary_row {
+#jxjnkupoxm .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -2242,7 +2236,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   padding-right: 5px;
 }
 
-#zpingfyxrr .gt_first_grand_summary_row {
+#jxjnkupoxm .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -2252,11 +2246,11 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-top-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_striped {
+#jxjnkupoxm .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#zpingfyxrr .gt_table_body {
+#jxjnkupoxm .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -2265,7 +2259,7 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-bottom-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_footnotes {
+#jxjnkupoxm .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2279,13 +2273,13 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_footnote {
+#jxjnkupoxm .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#zpingfyxrr .gt_sourcenotes {
+#jxjnkupoxm .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -2299,41 +2293,41 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
   border-right-color: #D3D3D3;
 }
 
-#zpingfyxrr .gt_sourcenote {
+#jxjnkupoxm .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#zpingfyxrr .gt_left {
+#jxjnkupoxm .gt_left {
   text-align: left;
 }
 
-#zpingfyxrr .gt_center {
+#jxjnkupoxm .gt_center {
   text-align: center;
 }
 
-#zpingfyxrr .gt_right {
+#jxjnkupoxm .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#zpingfyxrr .gt_font_normal {
+#jxjnkupoxm .gt_font_normal {
   font-weight: normal;
 }
 
-#zpingfyxrr .gt_font_bold {
+#jxjnkupoxm .gt_font_bold {
   font-weight: bold;
 }
 
-#zpingfyxrr .gt_font_italic {
+#jxjnkupoxm .gt_font_italic {
   font-style: italic;
 }
 
-#zpingfyxrr .gt_super {
+#jxjnkupoxm .gt_super {
   font-size: 65%;
 }
 
-#zpingfyxrr .gt_footnote_marks {
+#jxjnkupoxm .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
